# ChangeLog for x11-libs/libfm
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/libfm/ChangeLog,v 1.100 2014/03/16 10:32:42 hwoarang Exp $

  16 Mar 2014; Markos Chandras <hwoarang@gentoo.org> libfm-1.2.0.ebuild,
  libfm-9999.ebuild:
  libfm-1.2.0 now provides lxshortcut. Bug #503678. Patch by Johannes Janssen
  <mail@johannes-janssen.de>

  09 Mar 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org> libfm-1.1.4.ebuild:
  x86 stable wrt bug #494440

*libfm-1.2.0 (06 Mar 2014)

  06 Mar 2014; Markos Chandras <hwoarang@gentoo.org> +libfm-1.2.0.ebuild,
  libfm-9999.ebuild:
  Version bump. Bug #502134

  05 Mar 2014; Agostino Sarubbo <ago@gentoo.org> libfm-1.1.4.ebuild:
  Stable for ppc, wrt bug #494440

  04 Mar 2014; Vicente Olivert Riera <vincent@gentoo.org> libfm-1.1.4.ebuild:
  Add ~mips keyword.

  22 Feb 2014; Chema Alonso <nimiux@gentoo.org> libfm-1.1.4.ebuild:
  Stable for amd64 wrt bug #494440

  20 Feb 2014; Markus Meier <maekke@gentoo.org> libfm-1.1.4.ebuild:
  arm stable, bug #494440

  07 Feb 2014; Markos Chandras <hwoarang@gentoo.org> libfm-1.1.4.ebuild,
  libfm-9999.ebuild, metadata.xml:
  Trying to fix bug #438700 again by introducing an "automount" useflag to
  indicate whether automount is desired in pcmanfm or the user will use an
  external application to handle this outside of libfm/pcmanfm. Initial patch
  by Dustin C. Hatch <admiralnemo@gmail.com>

  30 Dec 2013; Markos Chandras <hwoarang@gentoo.org> libfm-1.1.4.ebuild,
  libfm-9999.ebuild, metadata.xml:
  Add udisks use-flag per bug #438700 for systems without *kit packages. Patch
  by Dominique Michel <dominique.michel@vtxnet.ch>

  14 Dec 2013; Markos Chandras <hwoarang@gentoo.org> -libfm-1.1.0-r1.ebuild,
  -libfm-1.1.2.2.ebuild, -libfm-1.1.2.ebuild:
  Remove old

  10 Dec 2013; Markos Chandras <hwoarang@gentoo.org> libfm-1.1.4.ebuild,
  libfm-9999.ebuild:
  Do not block lxde-base/lxshortcut. Bug #493844
