@@ -5,28 +5,30 @@ AUX libfm-0.1.17-ssp-fix.patch 908 SHA256 f8fb5e8f6a712de882151f50a9a23d002b8719
 DIST libfm-0.1.17.tar.gz 874556 SHA256 1740681cff4cd4c5a2eaa9805d8898269cfb6a49a0bda0acb242def15bc7131b SHA512 83d62e78c68f5a212dc464774f4ac9a965f58741b9cc31bf6599c7304e0fde668edd99e33a2f9d19d2c342483d92ed36031c388c92c858c55217e47b5c8ba044 WHIRLPOOL c55471431e4130cf96412cf4943e993954139c319dd5434f1d718d9c0609a12bde3dbb8e43b889bb4cefd300e5073b59b4b8fe6eeb732d87d52d8a9d536733b4
 DIST libfm-1.1.4.tar.xz 699080 SHA256 8512c22b89d11e9c0f6044feeb72a96ac542116012c29cc8dbc287476223ee60 SHA512 66d586703a47e537a4f0b3c077facdc22df5226bc4f6462d4f01c1f95af00ccc6d39f49b08a92976b4f53cc42aef282bb16044c29049f0a415ac9f46426ec94c WHIRLPOOL ec9176418be358ba2f9706e41b8eab6496cb9ccea4c431b1f7aad0d64ff1c97249c4da5b6acacf58956cb54b22920bdc659d1ff462bfdb17ec438cdc4957b644
 DIST libfm-1.2.0.tar.xz 890064 SHA256 f0513484e43dcc576097508b7d666f7eb72530963e5a21692034a7ea6a6efc22 SHA512 a62d3b8a26bf52c058f49e9b5328409f32189c708c0de8f419e7946e0be19f2d5dad604a214381b98bf1b26a81e85f60bced8b29b40bbfeb7e1c0aee4d1e36f2 WHIRLPOOL b78c4ad2b36b2729d520bde2da32543abf2a3fa043057fd71c80c0f744abbf39092da6b15e34dc8c7ca8e9237b8df4d55a7f367cba6115179ec6c1c78985e129
+DIST libfm-1.2.2.1.tar.xz 894092 SHA256 dbb0a3f7fd9615cccf4ad8ed1a07591535712d00eede03e5bd564090b33a4329 SHA512 fcbd89748c033a7d237462081cac5d1c2d7c11167f06674f766ef7f74590e7f35e5828c5a5056c31d30b4d50aedf5cb0dd1c2811d8d7b9a432af2e51a6d545d1 WHIRLPOOL 2bf2f7a717d11537bd0c5e477c73ed010cf4ae3e6dc8e4317db62a8a55f356026d87dda801512c4af6605258fb4b7509e5f2dbe3de7105af97fea33e18a7d20c
 EBUILD libfm-0.1.17-r1.ebuild 1744 SHA256 f95b9a221f951124a89b7e067b2534bc8cb98131e3112781e5f0de2106ca5588 SHA512 60400b6633ce414d29b6797904d1a3eacfb3d372e89cc765a822e92a2ba6f26294401d6989d0dd3a939b01572fcf5f89eedd6416ea15cfb2e8eed7cf45b99f90 WHIRLPOOL 05c0eb3b9813ccd33fa352e5904928e6f8fbd48a325832765a294a394de951bfa5fb2113cf3be7d786c743cddf8ad75b291bc9a5915d5a0de6083f7499f7b519
 EBUILD libfm-1.1.4.ebuild 3265 SHA256 a1d34a0c63898aac0d956b261d564fed9f72614ddf90228f92295eae5908cfdd SHA512 f79355b7fc0579043c86ff427fb81b1d446eaf60b65be8d464fb3c01b7baa5d1a8f98b77bd7ad8a940464652f98ed758d0546659ff917516856f3e0f5ddfc1ba WHIRLPOOL a79fd0d3a790e767f1cf8be2d4a8af74a12486813deb6d59c9531b7f808fa60c1b04cfbc0eebf256888965c895904f2db5991cee983631b883b40aae4b6af872
 EBUILD libfm-1.2.0.ebuild 3292 SHA256 c1edb49433975fd66419c3f9336f7cf034dbc3e3de80cd380c205353b811d391 SHA512 e2b3f5756140fc4b113dfb103dcab1343fe2c6d79524fd30fec8d9c78815e130c70b336d16dc7973ba15c26d345edc84faa2cff96ba09c8c3390ffe65539135a WHIRLPOOL 076fdabf7b0e56a2a1cd0eadb261a1cd49f666542e5c350004a7e179d0682799a4b0ccc0f566eb4e60adab4927e198232af07ebea2067c508ba1e1cc298115b2
-EBUILD libfm-9999.ebuild 3337 SHA256 cdb71d8c7e1b49bba041ec1660e65414a807a73fd7d77d3f44cba161a9b792ed SHA512 80be6687d5d28ab4faa1422d50775ad311e3803babf808f188e28c346b72dca4a7437a3a778766971b501be54f257583ae51a96ffbed6cc798df3f9ac856e453 WHIRLPOOL 5a459ca8b1555bea440c35dd94476762246c8017cb0b029a5c1e8d7c88a0375f3ce565d0e52e9ce973620f430f67c72b5abb7c3561cb06786831dc621351f515
-MISC ChangeLog 14620 SHA256 796c67ff8c5e00bb18425b7551853adc047373bbf68b092ddbcfd8de0cea532b SHA512 c2a886264675e414967a0530691da911ec99a999d97f83d5e057ae0b79f827e9d72b980cf19edd8d7880c8856126ecb05b680401c931714cd05d20369912c76b WHIRLPOOL 412d7bc250f6fdae49b191f22df4ffe58ea58f8a6567b0279182f5625c60ca54d443230dc9d0c3538f8db2015b6d58e8389a57fb9866d1492147f0f14a1bc204
+EBUILD libfm-1.2.2.1.ebuild 3352 SHA256 4a1650ca297973ae994b1ed690745723777415dad985e90b522c0c3a70d118f0 SHA512 d03e54d1423f48a031a2360ccf751a4d31563d0be1dd956b8b1de2efa5001f0405cc3e1dce46066847157a3d4e78c77b76452cefcce63e9c5e822eecb59c0fcb WHIRLPOOL 9a78ba733a39c9a2013ac40151f31501fdb921b538318dd35b5bb72ec33945cf8fdfc17f414f26ba0689fe5761fb1dc7e70b396aaf871041d59d39b6c6a2b69d
+EBUILD libfm-9999.ebuild 3395 SHA256 f0d647d260e64dac633c76cfb04dc81860a0bb7062a95907f711dfb435137c5c SHA512 550626fa38e1f9b27d611d4e5a1ca67d3c2723f5da3e341cf77b6d2e7beddc614adab1799eda24afa83055577b4a38d8e93bce3656f37c633b7e4926d640bbe1 WHIRLPOOL 8aebf97c65c6b2c3b797ce80d050d703908880c317bc45cae746feb351f2f0b257284110c0b9e7fbab6b13f5c88d7f8b1199fe285a58995385ade4b11aa65b28
+MISC ChangeLog 14776 SHA256 e0dc10683a074236c12f648724162110448f33a4c92014f2093f8ce49b379ae4 SHA512 c31d0c9e9e8afc28ed2294f6825ca72e5e6fe28792d9ce76fc598614b643daff20806ee3094d463b5b14f0da6c7bf316eefab3e76e1830df0ff5c8c46cc51748 WHIRLPOOL c0fd518616684c13f1130e2ce4aa2ce8769b191f54b299a4c4fe241a81bd1a36273dcfc78a68fc931f79e44d24c3044a70cda167d139da17e4731a662b5fa243
 MISC metadata.xml 530 SHA256 c6ecddb0ae185f3438900090b4b05ec36b7f707f62075c94fe58ff98ad718270 SHA512 25c7bee3c83d7c76e423d72d2848e253b8e604bb76727ad6ce5ca51dcc904e0d0e1cd6afca04b55a6ff9cc0dee6516273f607512b80d5bf04af01a57f26a3c50 WHIRLPOOL ef86e0d6864d8e62215dcf162bde85e0a0ff091f038290e1715f2f33c5f385e81b08df84755b67e55939c0080c614d7c964a984fc816052320a2445ad7d2b26b
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iQJ8BAEBCABmBQJTJX2GXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCABmBQJUCsijXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQzNTVDNDczOUYzRjJEMTRGNDRGMzU2RkMw
-OUJGNEY1NEMyQkE3RjNDAAoJEAm/T1TCun88410P/05kHn7BkpRWwXFMq6RO/p5V
-thJMq6maZ/CdLZ3dw7uCyhpSgYuMvca+JdPMSE230hMVcrY+neGs2a8kpxYX4so/
-DJtSmqMklsllZ500hWpKZMbAj/BIp0J4WqHLJEUyyo9Sc6Fd9SXTlmj3EGYLwBFP
-nR7v9fAf8daFp/I/o4eFDsLawg1t4m8/H4Ukp1OCezuj8S09gj1sEir2AWi/RD4i
-ofJgqIot59RXV1nublZV8Bwu3Fv+Q9LDlIY137l0KG/V/6yoed2oHpHqc50fBLX7
-c5yvP8HSTsdhFt0Vj+Pu+4I8opnsSDExNxVZRDXBFF55PT4U4o4Rh8mcgcEXx35B
-S3lLovEceVudfNwYzlpWvsjPQeqZB1sHbHpsHhQEXs9jgLNyRdXbOmHesbImLxQp
-PJJ53ojOJ3D//3IHAN2eyJyc3VK9K3XlhnbQd2UIQ96sFKJe+7OlQzdqEx8vWbAh
-WdMSDBWh2TWeVfj2T0wUbztNjwRmgyC24jjSgnOwMO6xM9dElJnvbK55TkU1SLkT
-KYGA7H69uzKVk1wHckT4FFJByHEjMxqSkQRxyuDgWGRP0f/k2r3foqQLRMJo2y5n
-BfWy3tpgXUjTbS5h2A/OQ9P0aXIqsn5+N+27ew8OwhDORCvq4vUc4nOi3Zgzz2/l
-eTKvEs2i5hmV/+w1B4oN
-=zHPV
+OUJGNEY1NEMyQkE3RjNDAAoJEAm/T1TCun88sBUP/iwfTdTh+VoqtLlDSOfb5/Ga
+ShLuXLeyCCGUy2+Oabe2MqOQVGHtaYset6UaXorAb9AA9wifjxGYge9QWvckZjhX
+kjCe7iZZCGEm7jtqRa6per8Ro0MajE/HXWlVV6jVnHWjMeHOEl2P3X9oKwRLCkV0
+vl0c5z4hSs2qsWmgdxMXigFPg29kNge/daNANHyPv0YLSPQo5RP+qzMgvYUb/lQy
+TTqBNr15EXPQoaRzB3VcFKHvXnjvdpyRX50LeS+XffsQugv3IYu0TLILY8ONO7th
+JE2IcY+76NjKyn47K0eAsJ5T6PA0Arv/7KB7LrWjElOy4UFxI5dALDjb2Or4yY08
+OfstoKqo2b0RFolWt4q2C6naw6slGkTODzJEgCdXq4xVHer09WUWBYufgJ0I4q44
+1s5p7KKg5GnLgQLt1H3NGFL3A+8ixHIesNAX6jEUc11WX7Eg3q9cmV76tLx6CarT
+mycgLTfB3cv1gtAsr03nRBVQClRFE3H4ExlWNlJf2pV/WpY1JELJ2kfj+RyjqwnN
+Lox3h4Lj7mQqTH+e7WFDA+kwzLW6NXJYfSI4vyIhhtEddQ21puZQSM+7fFR8iTW9
+cA0LyHusgTV/6hLQaektVhqfYDNZ28GQI/K8DcuaIavgq5l5tIrtGksUJxAR2Qvk
+QpmixlM2NNtccAYAIDzS
+=1E9O
 -----END PGP SIGNATURE-----
