@@ -1,6 +1,12 @@
 # ChangeLog for x11-libs/libfm
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/libfm/ChangeLog,v 1.100 2014/03/16 10:32:42 hwoarang Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/libfm/ChangeLog,v 1.101 2014/09/06 08:41:06 hwoarang Exp $
+
+*libfm-1.2.2.1 (06 Sep 2014)
+
+  06 Sep 2014; Markos Chandras <hwoarang@gentoo.org> +libfm-1.2.2.1.ebuild,
+  libfm-9999.ebuild:
+  Version bump. Bug #518134
 
   16 Mar 2014; Markos Chandras <hwoarang@gentoo.org> libfm-1.2.0.ebuild,
   libfm-9999.ebuild:
